--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "express-http-proxy": "^1.6.0",
     "express-spa": "^0.0.2",
     "morgan": "^1.9.1"
   }
