--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.0",
     "express-spa": "^0.0.2",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "prerender-node": "^3.2.5"
   }
 }
