add prerender cache and script removal

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.0",
     "express-spa": "^0.0.2",
