--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -15,5 +16,8 @@
     "morgan": "^1.9.1",
     "prerender-node": "^3.2.5",
     "puppeteer": "^5.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
